Updated Entity Icons, enhanced status of progress tracking, added handlebar helpers to group enumerations and made some updates to the reivew step.

--- a/query/index.html
+++ b/query/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Create a new Query">
         <meta name="author" content="AIR">
+        <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700,800%7CRoboto+Slab:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="http://ec2-54-68-66-55.us-west-2.compute.amazonaws.com/css/headfoot.css" />
         <link rel="stylesheet" href="../assets/sass/font-awesome/font-awesome.min.css" />
         <link rel="stylesheet" href="../assets/sass/query.css" />
@@ -27,20 +28,37 @@
         </header>
         <!-- Container -->
         <section id="step-by-step-container" class="container"></section>
-        
         <!-- /Container -->
-        <footer class="thin-footer">
-            <div>
-                <p>© 2014</p>
-                <nav>
-                    <ul>
-                        <li class="about"><a href="#" title="About">About</a></li>
-                        <li class="methods"><a href="#" title="Methods and Sources">Methods and Sources</a></li>
-                        <li class="feedback"><a href="#" title="Send Feedback">Send Feedback</a></li>
-                        <li class="glossary"><a href="#" title="Glossary">Glossary</a></li>
-                    </ul>
-                </nav>
+        <section class="container">
+            <!-- form action buttons -->
+            <div class="form-actions col-md-12" style="display: none; text-align: right;">
+                <div class="pull-right">
+                    <div id="captcha-container"></div>
+                    <button id="save" type="submit" class="btn btn-lg btn-default" style="margin-top: 10px;">Submit Query</button>
+                </div>
             </div>
-        </footer>
-    </body>
+        </section>
+     <!-- form action buttons -->
+            <footer class="thin-footer">
+                <div>
+                    <p>© 2014</p>
+                    <nav>
+                        <ul>
+                            <li class="about"><a href="#" title="About">About</a></li>
+                            <li class="methods"><a href="#" title="Methods and Sources">Methods and Sources</a></li>
+                            <li class="feedback"><a href="#" title="Send Feedback">Send Feedback</a></li>
+                            <li class="glossary"><a href="#" title="Glossary">Glossary</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </footer>
+            <script type="text/javascript">
+                var loadRecaptcha = function () {
+                    //grecaptcha.render('html_element', {
+                    //    'sitekey': 'your_site_key'
+                    //});
+                };
+            </script>
+            <script src="https://www.google.com/recaptcha/api.js?onload=loadRecaptcha&render=explicit" async defer></script>
+</body>
 </html>
