--- a/query/index.html
+++ b/query/index.html
@@ -8,8 +8,10 @@
         <meta name="author" content="AIR">
         <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700,800%7CRoboto+Slab:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="http://ec2-54-68-66-55.us-west-2.compute.amazonaws.com/css/headfoot.css" />
+       
         <link rel="stylesheet" href="../assets/sass/font-awesome/font-awesome.min.css" />
         <link rel="stylesheet" href="../assets/sass/query.css" />
+        <link rel="stylesheet" href="../assets/css/bootstrap-tagsinput.css" />
         <script data-main="../js/main" src="../js/libs/require.js"></script>
     </head>
     <body>
