--- a/query/fields.html
+++ b/query/fields.html
@@ -12,7 +12,16 @@
     <link rel="stylesheet" href="http://www.patentsview.org/web/css/headfoot.css" />
     <link rel="stylesheet" href="http://www.patentsview.org/querydev/assets/css/font-awesome.min.css" />
     <link rel="stylesheet" href="http://www.patentsview.org/querydev/assets/css/pvqt.css" />
-    
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-90540397-1', 'auto');
+    ga('send', 'pageview', {/*sequence*/ metric1: 0});
+    </script>
+        
 <style>
 h1, h2, h3 {
     font-size: 36px;
