--- a/query/index.html
+++ b/query/index.html
@@ -1,20 +1,30 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" href="/web/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/web/favicon.ico" type="image/ico" />
     <meta charset="utf-8">
     <title>Create a PatentsView Query</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Create a new Query">
     <meta name="author" content="AIR">
-    <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700,800%7CRoboto+Slab:400,700' rel='stylesheet' type='text/css'>
-    <!--<link rel="stylesheet" href="http://ec2-54-68-66-55.us-west-2.compute.amazonaws.com/css/headfoot.css" />-->
-    <link rel="stylesheet" href="http://www.patentsview.org/web/css/headfoot.css" />
 
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700,800%7CRoboto+Slab:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="http://www.patentsview.org/web/css/headfoot.css" />
     <link rel="stylesheet" href="http://www.patentsview.org/querydev/assets/css/font-awesome.min.css" />
     <link rel="stylesheet" href="http://www.patentsview.org/querydev/assets/css/font-awesome.min.css" />
     <link rel="stylesheet" href="http://www.patentsview.org/querydev/assets/css/pvqt.css" />
     <link rel="stylesheet" href="http://www.patentsview.org/querydev/assets/css/prism.css" />
     <script data-main="http://www.patentsview.org/querydev/js/main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.18/require.min.js"></script>
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-90540397-1', 'auto');
+    ga('send', 'pageview', {/*sequence*/ metric1: 0});
+    </script>    
 </head>
 <body>
     <noscript>This search tool requires Javascript. For more information about finding a particular patent or group of patents please visit <a href="http://uspto.gov/" title="United States Patent and Trademark Office Website">www.uspto.gov</a> or call our customer support at <a href="tel:1-800-786-9199" title="USPTO Customer Support Toll-Free Phone Number">1-800-786-9199</a>.</noscript>
@@ -38,19 +48,7 @@
             <input id="q" name="q" type="hidden" />
         </form>
     <!-- form action buttons -->
-    <footer class="thin-footer">
-        <div>
-            <p>© 2014</p>
-            <nav>
-                <ul>
-                    <li class="about"><a href="#" title="About">About</a></li>
-                    <li class="methods"><a href="#" title="Methods and Sources">Methods and Sources</a></li>
-                    <li class="feedback"><a href="#" title="Send Feedback">Send Feedback</a></li>
-                    <li class="glossary"><a href="#" title="Glossary">Glossary</a></li>
-                </ul>
-            </nav>
-        </div>
-    </footer>
+    
     <script type="text/javascript">
         var loadRecaptcha = function () { };
     </script>
