--- a/query/faqs.html
+++ b/query/faqs.html
@@ -12,16 +12,7 @@
     <link rel="stylesheet" href="http://www.patentsview.org/web/css/headfoot.css" />
     <link rel="stylesheet" href="http://www.patentsview.org/querydev/assets/css/font-awesome.min.css" />
     <link rel="stylesheet" href="http://www.patentsview.org/querydev/assets/css/pvqt.css" />
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-90540397-1', 'auto');
-    ga('send', 'pageview', {/*sequence*/ metric1: 0});
-    </script>
-        
+    
 <style>
 h1, h2, h3 {
     font-size: 36px;
@@ -149,7 +140,7 @@ a {
 
 <h4><a class="anchor" name="step1"></a>Step 1: Select Category</h4>
 
-<p>In Step 1, select the primary category of interest: patents, inventors, or assignees.  This selection will affect your available search criteria as well as the structure and content of your output data file.  These effects are dictated by the structure of the <a href="http://www.patentsview.org/api/" target="_blank">PatentsView API.</a></p>
+<p>In Step 1, select the primary category of interest: patents, inventors, or assignees. Query results will be organized based on these primary categories, which correspond to the <a href="http://www.patentsview.org/api/" target="_blank">PatentsView API Endpoints.</a></p>
 
 <p>For example, suppose you are interested in querying the PatentsView database for a particular inventor named "Austin L. Gurney". If you want to retrieve detailed information regarding all of Austin L. Gurney’s patents (e.g. patent title and abstract, filing and grant dates, technology classification, and citations), you would select "patents" as the primary category. If, rather, you are interested in the individuals that Austin L. Gurney collaborated with on these inventions, you would select "inventors" as the primary category. This would allow you to retrieve information on Austin L. Gurney’s co-inventors (e.g. first and last name, location). Alternatively, if you are interested in where Austin L. Gurney worked when he produced his patented technology, you would select "assignee" as the primary category to obtain detailed information on those organizations (e.g. name, location, total number of patents and inventors).</p>
 
