Latest rev2 updates.

--- a/query/faqs.html
+++ b/query/faqs.html
@@ -10,8 +10,8 @@
     <!--<link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700,800%7CRoboto+Slab:400,700' rel='stylesheet' type='text/css'>-->
     <link rel="stylesheet" href="http://www.patentsview.org/api/css/custom.css" />
     <link rel="stylesheet" href="http://www.patentsview.org/web/css/headfoot.css" />
-    <link rel="stylesheet" href="http://www.patentsview.org/querydev/assets/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="http://www.patentsview.org/querydev/assets/css/pvqt.css" />
+    <link rel="stylesheet" href="/assets/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="/assets/css/pvqt.css" />
     
 <style>
 h1, h2, h3 {
@@ -52,7 +52,7 @@ a {
             <nav>
                 <ul>
                     <li class="api"><a href="http://www.patentsview.org/api/">API</a><div class="nav-tooltip">provides developers and researchers programmatic access to the underlying data</div></li>
-                    <li class="data-query active"><a href="http://www.patentsview.org/querydev/">Data Query</a><div class="nav-tooltip">provides a graphical interface for researchers to query the entire underlying database</div></li>
+                    <li class="data-query active"><a href="/">Data Query</a><div class="nav-tooltip">provides a graphical interface for researchers to query the entire underlying database</div></li>
                     <li class="data-download"><a href="http://www.patentsview.org/download/">Data Download</a><div class="nav-tooltip">provides downloadable tables as csv files covering the underlying database</div></li>
                 </ul>
             </nav>
@@ -173,7 +173,7 @@ a {
 
 <p>Key terms in the patent data are defined in the <a href="http://www.patentsview.org/api/glossary.html" target="_blank">Glossary</a>.</p>
 
-<p>The primary category defines the search groups available to define specific criteria. The <a href="http://www.patentsview.org/querydev/query/data_dictionary.html" target="_blank">Query Tool Data Dictionary</a> provides definitions, search group, and category of all searchable and output fields.</p>
+<p>The primary category defines the search groups available to define specific criteria. The <a href="/query/data_dictionary.html" target="_blank">Query Tool Data Dictionary</a> provides definitions, search group, and category of all searchable and output fields.</p>
 
 <h2><a class="anchor" name="boolean"></a>Can I use Boolean operators in Quick Search?</h2>
 
