--- a/query/index.html
+++ b/query/index.html
@@ -10,11 +10,10 @@
     <!--<link rel="stylesheet" href="http://ec2-54-68-66-55.us-west-2.compute.amazonaws.com/css/headfoot.css" />-->
     <link rel="stylesheet" href="http://www.patentsview.org/web/css/headfoot.css" />
 
-    <link rel="stylesheet" href="http://www.patentsview.org/querydev/assets/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="http://www.patentsview.org/querydev/assets/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="http://www.patentsview.org/querydev/assets/css/pvqt.css" />
-    <link rel="stylesheet" href="http://www.patentsview.org/querydev/assets/css/prism.css" />
-    <script data-main="http://www.patentsview.org/querydev/js/main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.18/require.min.js"></script>
+    <link rel="stylesheet" href="/assets/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="/assets/css/pvqt.css" />
+    <link rel="stylesheet" href="/assets/css/prism.css" />
+    <script data-main="/js/main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.18/require.min.js"></script>
 </head>
 <body>
     <noscript>This search tool requires Javascript. For more information about finding a particular patent or group of patents please visit <a href="http://uspto.gov/" title="United States Patent and Trademark Office Website">www.uspto.gov</a> or call our customer support at <a href="tel:1-800-786-9199" title="USPTO Customer Support Toll-Free Phone Number">1-800-786-9199</a>.</noscript>
@@ -33,7 +32,7 @@
     <!-- Container -->
     <section id="step-by-step-container" class="container"></section>
     <!-- /Container -->
-    <form id="submit" method="post" action="http://www.patentsview.org/querydev/query/submit.php">
+    <form id="submit" method="post" action="/query/submit.php">
         <!--<form id="submit" method="post" action="/query/submit.php">-->
             <input id="q" name="q" type="hidden" />
         </form>
