project specific stylings

--- a/query/index.html
+++ b/query/index.html
@@ -28,6 +28,9 @@
                 min-height: 600px;
                 padding-top: 50px;
             }
+            .paneNav button {
+                margin-top: 12px !important;
+            }
         </style>
     </head>
     <body>
