--- a/query/fields.html
+++ b/query/fields.html
@@ -46,18 +46,7 @@ a {
 </head>
 <body>
     <noscript>This search tool requires Javascript. For more information about finding a particular patent or group of patents please visit <a href="http://uspto.gov/" title="United States Patent and Trademark Office Website">www.uspto.gov</a> or call our customer support at <a href="tel:1-800-786-9199" title="USPTO Customer Support Toll-Free Phone Number">1-800-786-9199</a>.</noscript>
-    <header class="med-header">
-        <div class="centered-header">
-            <a href="/" class="logo" title="PatentsView - USPTO" alt="PatentsView Logo"></a>
-            <nav>
-                <ul>
-                    <li class="api"><a href="http://www.patentsview.org/api/">API</a><div class="nav-tooltip">provides developers and researchers programmatic access to the underlying data</div></li>
-                    <li class="data-query active"><a href="http://www.patentsview.org/querydev/">Data Query</a><div class="nav-tooltip">provides a graphical interface for researchers to query the entire underlying database</div></li>
-                    <li class="data-download"><a href="http://www.patentsview.org/download/">Data Download</a><div class="nav-tooltip">provides downloadable tables as csv files covering the underlying database</div></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    
     <!-- Container -->
     <section id="step-by-step-container" class="container"></section>
     <!-- /Container -->
@@ -218,6 +207,6 @@ a {
         </div>
     </section>
     <!-- form action buttons -->
-    
+    <script src="../js/header_footer.js"></script>
 </body>
 </html>
