--- a/query/thank-you.html
+++ b/query/thank-you.html
@@ -13,22 +13,11 @@
 </head>
 <body>
     <noscript>This search tool requires Javascript. For more information about finding a particular patent or group of patents please visit <a href="http://uspto.gov/" title="United States Patent and Trademark Office Website">www.uspto.gov</a> or call our customer support at <a href="tel:1-800-786-9199" title="USPTO Customer Support Toll-Free Phone Number">1-800-786-9199</a>.</noscript>
-    <header class="med-header">
-        <div class="centered-header">
-            <a href="/" class="logo" title="PatentsView - USPTO" alt="PatentsView Logo"></a>
-            <nav>
-                <ul>
-                    <li class="api"><a href="#">API</a><div class="nav-tooltip">provides developers and researchers programmatic access to the underlying data</div></li>
-                    <li class="data-query active"><a href="#">Data Query</a><div class="nav-tooltip">provides a graphical interface for researchers to query the entire underlying database</div></li>
-                    <li class="data-download"><a href="#">Data Download</a><div class="nav-tooltip">provides downloadable tables as csv files covering the underlying database</div></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    
     <!-- Container -->
     <section id="step-by-step-container" class="container"></section>
     <!-- /Container -->
-    <section class="container">
+    <section class="container" style="margin-bottom: 200px;">
         <!-- form action buttons -->
         <div class="col-md-12">
             <h1 class="thankyou">Thank you</h1>
@@ -37,18 +26,6 @@
         </div>
     </section>
     <!-- form action buttons -->
-    <footer class="thin-footer">
-        <div>
-            <p>© 2014</p>
-            <nav>
-                <ul>
-                    <li class="about"><a href="#" title="About">About</a></li>
-                    <li class="methods"><a href="#" title="Methods and Sources">Methods and Sources</a></li>
-                    <li class="feedback"><a href="#" title="Send Feedback">Send Feedback</a></li>
-                    <li class="glossary"><a href="#" title="Glossary">Glossary</a></li>
-                </ul>
-            </nav>
-        </div>
-    </footer>
+    <script src="../js/header_footer.js"></script>
 </body>
 </html>
