Asset path fixes/

--- a/query/thank-you.html
+++ b/query/thank-you.html
@@ -8,8 +8,8 @@
     <meta name="author" content="AIR" />
     <!--<link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700,800%7CRoboto+Slab:400,700' rel='stylesheet' type='text/css'>-->
     <link rel="stylesheet" href="http://ec2-54-68-66-55.us-west-2.compute.amazonaws.com/css/headfoot.css" />
-    <link rel="stylesheet" href="../assets/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="../assets/css/pvqt.css" />
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="assets/css/pvqt.css" />
 </head>
 <body>
     <noscript>This search tool requires Javascript. For more information about finding a particular patent or group of patents please visit <a href="http://uspto.gov/" title="United States Patent and Trademark Office Website">www.uspto.gov</a> or call our customer support at <a href="tel:1-800-786-9199" title="USPTO Customer Support Toll-Free Phone Number">1-800-786-9199</a>.</noscript>
@@ -26,6 +26,6 @@
         </div>
     </section>
     <!-- form action buttons -->
-    <script src="../js/header_footer.js"></script>
+    <script src="js/header_footer.js"></script>
 </body>
 </html>
