--- a/query/index.html
+++ b/query/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -7,10 +7,10 @@
     <meta name="description" content="Create a new Query">
     <meta name="author" content="AIR">
     <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700,800%7CRoboto+Slab:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../assets/css/headfoot.css" />
-    <link rel="stylesheet" href="../assets/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="../assets/css/pvqt.css" />
-    <link rel="stylesheet" href="../assets/css/prism.css" />
+    <link rel="stylesheet" href="assets/css/headfoot.css" />
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="assets/css/pvqt.css" />
+    <link rel="stylesheet" href="assets/css/prism.css" />
     <script data-main="../js/main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.18/require.min.js"></script>
 </head>
 <body>
@@ -31,6 +31,6 @@
         var loadRecaptcha = function () { };
     </script>
     <script src="https://www.google.com/recaptcha/api.js?onload=loadRecaptcha&render=explicit" async defer></script>
-    <script src="../js/header_footer.js"></script>
+    <script src="js/header_footer.js"></script>
 </body>
 </html>
