Remove links to querydev

--- a/query/thank-you.html
+++ b/query/thank-you.html
@@ -22,7 +22,7 @@
         <div class="col-md-12">
             <h1 class="thankyou">Thank you</h1>
             <p class="step-desc">Your Query has been successfully submitted. <br />Your results will be emailed to you within 24 hours.</p>
-            <a href="https://www.patentsview.org/querydev" class="prev-next-btn btn btn-lg btn-primary" title="Begin New Query">Begin New Query <i class="fa fa-caret-right"></i></a>
+            <a href="https://www.patentsview.org/" class="prev-next-btn btn btn-lg btn-primary" title="Begin New Query">Begin New Query <i class="fa fa-caret-right"></i></a>
         </div>
     </section>
     <!-- form action buttons -->
