--- a/query/fields.html
+++ b/query/fields.html
@@ -10,8 +10,8 @@
     <!--<link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700,800%7CRoboto+Slab:400,700' rel='stylesheet' type='text/css'>-->
     <link rel="stylesheet" href="https://www.patentsview.org/api/css/custom.css" />
     <link rel="stylesheet" href="https://www.patentsview.org/web/css/headfoot.css" />
-    <link rel="stylesheet" href="https://www.patentsview.org/querydev/assets/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="https://www.patentsview.org/querydev/assets/css/pvqt.css" />
+    <link rel="stylesheet" href="https://www.patentsview.org//assets/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://www.patentsview.org//assets/css/pvqt.css" />
     
 <style>
 h1, h2, h3 {
@@ -162,7 +162,7 @@ a {
 
 <p>Key terms in the patent data are defined in the <a href="https://www.patentsview.org/api/glossary.html" target="_blank">Glossary</a>.</p>
 
-<p>The primary category defines the search groups available to define specific criteria. The <a href="https://www.patentsview.org/querydev/query/data_dictionary.html" target="_blank">Query Tool Data Dictionary</a> provides definitions, search group, and category of all searchable and output fields.</p>
+<p>The primary category defines the search groups available to define specific criteria. The <a href="https://www.patentsview.org//query/data_dictionary.html" target="_blank">Query Tool Data Dictionary</a> provides definitions, search group, and category of all searchable and output fields.</p>
 
 <h2><a class="anchor" name="boolean"></a>Can I use Boolean operators in Quick Search?</h2>
 
