Windows/Linux Split

--- a/faqs.html
+++ b/faqs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Query Tool FAQs</title>
-   <link rel="icon" href="http://patentsview.org/web/favicon.ico" type="image/x-icon" />
+   <link rel="icon" href="https://patentsview.org/web/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Thank You!" />
     <meta name="author" content="AIR" />
@@ -207,6 +207,6 @@ a {
         </div>
     </section>
     <!-- form action buttons -->
-    <script src="../js/header_footer.js"></script>
+    <script src="js/header_footer.js"></script>
 </body>
 </html>
