--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Create a new Query">
     <meta name="author" content="AIR">
-    <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700,800%7CRoboto+Slab:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700,800%7CRoboto+Slab:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="assets/css/headfoot.css" />
     <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
     <link rel="stylesheet" href="assets/css/pvqt.css" />
@@ -20,7 +20,7 @@
         <!-- Container -->
         <section id="step-by-step-container" class="container"></section>
         <!-- /Container -->
-        <form id="submit" method="post" action="../query/submit.php">
+        <form id="submit" method="post" action="submit.php">
             <!--<form id="submit" method="post" action="/query/submit.php">-->
             <input id="q" name="q" type="hidden" />
         </form>
