--- a/thank-you.html
+++ b/thank-you.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Thank You!" />
     <meta name="author" content="AIR" />
     <!--<link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700,800%7CRoboto+Slab:400,700' rel='stylesheet' type='text/css'>-->
-    <link rel="stylesheet" href="http://ec2-54-68-66-55.us-west-2.compute.amazonaws.com/css/headfoot.css" />
+    <link rel="stylesheet" href="https://ec2-54-68-66-55.us-west-2.compute.amazonaws.com/css/headfoot.css" />
     <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
     <link rel="stylesheet" href="assets/css/pvqt.css" />
 </head>
