--- a/assets/less/bootstrap-3.3.6/js/tests/index.html
+++ b/assets/less/bootstrap-3.3.6/js/tests/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Bootstrap Plugin Test Suite</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-3509031-17"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-3509031-17");
+    </script>
 
     <!-- jQuery -->
     <script src="vendor/jquery.min.js"></script>
@@ -11,116 +25,116 @@
       // Disable jQuery event aliases to ensure we don't accidentally use any of them
       (function () {
         var eventAliases = [
-          'blur',
-          'focus',
-          'focusin',
-          'focusout',
-          'load',
-          'resize',
-          'scroll',
-          'unload',
-          'click',
-          'dblclick',
-          'mousedown',
-          'mouseup',
-          'mousemove',
-          'mouseover',
-          'mouseout',
-          'mouseenter',
-          'mouseleave',
-          'change',
-          'select',
-          'submit',
-          'keydown',
-          'keypress',
-          'keyup',
-          'error',
-          'contextmenu',
-          'hover',
-          'bind',
-          'unbind',
-          'delegate',
-          'undelegate'
-        ]
+          "blur",
+          "focus",
+          "focusin",
+          "focusout",
+          "load",
+          "resize",
+          "scroll",
+          "unload",
+          "click",
+          "dblclick",
+          "mousedown",
+          "mouseup",
+          "mousemove",
+          "mouseover",
+          "mouseout",
+          "mouseenter",
+          "mouseleave",
+          "change",
+          "select",
+          "submit",
+          "keydown",
+          "keypress",
+          "keyup",
+          "error",
+          "contextmenu",
+          "hover",
+          "bind",
+          "unbind",
+          "delegate",
+          "undelegate",
+        ];
         for (var i = 0; i < eventAliases.length; i++) {
-          $.fn[eventAliases[i]] = undefined
+          $.fn[eventAliases[i]] = undefined;
         }
-      })()
+      })();
     </script>
 
     <!-- QUnit -->
-    <link rel="stylesheet" href="vendor/qunit.css" media="screen">
+    <link rel="stylesheet" href="vendor/qunit.css" media="screen" />
     <script src="vendor/qunit.js"></script>
     <script>
       // See https://github.com/axemclion/grunt-saucelabs#test-result-details-with-qunit
-      var log = []
+      var log = [];
       // Require assert.expect in each test
-      QUnit.config.requireExpects = true
+      QUnit.config.requireExpects = true;
       QUnit.done(function (testResults) {
-        var tests = []
+        var tests = [];
         for (var i = 0, len = log.length; i < len; i++) {
-          var details = log[i]
+          var details = log[i];
           tests.push({
             name: details.name,
             result: details.result,
             expected: details.expected,
             actual: details.actual,
-            source: details.source
-          })
+            source: details.source,
+          });
         }
-        testResults.tests = tests
+        testResults.tests = tests;
 
-        window.global_test_results = testResults
-      })
+        window.global_test_results = testResults;
+      });
 
       QUnit.testStart(function (testDetails) {
-        $(window).scrollTop(0)
+        $(window).scrollTop(0);
         QUnit.log(function (details) {
           if (!details.result) {
-            details.name = testDetails.name
-            log.push(details)
+            details.name = testDetails.name;
+            log.push(details);
           }
-        })
-      })
+        });
+      });
 
       // Cleanup
       QUnit.testDone(function () {
-        $('#qunit-fixture').empty()
-        $('#modal-test, .modal-backdrop').remove()
-      })
+        $("#qunit-fixture").empty();
+        $("#modal-test, .modal-backdrop").remove();
+      });
 
       // Display fixture on-screen on iOS to avoid false positives
       if (/iPhone|iPad|iPod/.test(navigator.userAgent)) {
-        QUnit.begin(function() {
-          $('#qunit-fixture').css({ top: 0, left: 0 })
-        })
+        QUnit.begin(function () {
+          $("#qunit-fixture").css({ top: 0, left: 0 });
+        });
 
         QUnit.done(function () {
-          $('#qunit-fixture').css({ top: '', left: '' })
-        })
+          $("#qunit-fixture").css({ top: "", left: "" });
+        });
       }
 
       // Disable deprecated global QUnit method aliases in preparation for QUnit v2
       (function () {
         var methodNames = [
-          'async',
-          'asyncTest',
-          'deepEqual',
-          'equal',
-          'expect',
-          'module',
-          'notDeepEqual',
-          'notEqual',
-          'notPropEqual',
-          'notStrictEqual',
-          'ok',
-          'propEqual',
-          'push',
-          'start',
-          'stop',
-          'strictEqual',
-          'test',
-          'throws'
+          "async",
+          "asyncTest",
+          "deepEqual",
+          "equal",
+          "expect",
+          "module",
+          "notDeepEqual",
+          "notEqual",
+          "notPropEqual",
+          "notStrictEqual",
+          "ok",
+          "propEqual",
+          "push",
+          "start",
+          "stop",
+          "strictEqual",
+          "test",
+          "throws",
         ];
         for (var i = 0; i < methodNames.length; i++) {
           var methodName = methodNames[i];
@@ -130,7 +144,9 @@
     </script>
 
     <!-- Plugin sources -->
-    <script>$.support.transition = false</script>
+    <script>
+      $.support.transition = false;
+    </script>
     <script src="../../js/alert.js"></script>
     <script src="../../js/button.js"></script>
     <script src="../../js/carousel.js"></script>
@@ -155,7 +171,6 @@
     <script src="unit/tooltip.js"></script>
     <script src="unit/popover.js"></script>
     <script src="unit/affix.js"></script>
-
   </head>
   <body>
     <div id="qunit-container">
