--- a/assets/less/bootstrap-3.3.6/js/tests/visual/button.html
+++ b/assets/less/bootstrap-3.3.6/js/tests/visual/button.html
@@ -1,74 +1,91 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Button</title>
-  <link rel="stylesheet" href="../../../dist/css/bootstrap.min.css">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Button</title>
+    <link rel="stylesheet" href="../../../dist/css/bootstrap.min.css" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-3509031-17"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-</head>
-<body>
+      gtag("config", "UA-3509031-17");
+    </script>
 
-<div class="container">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="container">
+      <div class="page-header">
+        <h1>Button <small>Bootstrap Visual Test</small></h1>
+      </div>
 
-  <div class="page-header">
-    <h1>Button <small>Bootstrap Visual Test</small></h1>
-  </div>
+      <button
+        type="button"
+        data-loading-text="Loading for 3 seconds..."
+        class="btn btn-primary js-loading-button"
+      >
+        Loading state
+      </button>
 
-  <button type="button" data-loading-text="Loading for 3 seconds..." class="btn btn-primary js-loading-button">
-    Loading state
-  </button>
+      <button type="button" class="btn btn-primary" data-toggle="button">
+        Single toggle
+      </button>
 
-  <button type="button" class="btn btn-primary" data-toggle="button">Single toggle</button>
+      <div class="btn-group" data-toggle="buttons">
+        <label class="btn btn-primary">
+          <input type="checkbox" /> checkbox 1
+        </label>
+        <label class="btn btn-primary">
+          <input type="checkbox" /> checkbox 2
+        </label>
+        <label class="btn btn-primary">
+          <input type="checkbox" /> checkbox 3
+        </label>
+      </div>
 
-  <div class="btn-group" data-toggle="buttons">
-    <label class="btn btn-primary">
-      <input type="checkbox"> checkbox 1
-    </label>
-    <label class="btn btn-primary">
-      <input type="checkbox"> checkbox 2
-    </label>
-    <label class="btn btn-primary">
-      <input type="checkbox"> checkbox 3
-    </label>
-  </div>
+      <div class="btn-group" data-toggle="buttons">
+        <label class="btn btn-primary">
+          <input type="radio" name="options" id="option1" /> Radio 1
+        </label>
+        <label class="btn btn-primary">
+          <input type="radio" name="options" id="option2" /> Radio 2
+        </label>
+        <label class="btn btn-primary">
+          <input type="radio" name="options" id="option3" /> Radio 3
+        </label>
+      </div>
+    </div>
 
-  <div class="btn-group" data-toggle="buttons">
-    <label class="btn btn-primary">
-      <input type="radio" name="options" id="option1"> Radio 1
-    </label>
-    <label class="btn btn-primary">
-      <input type="radio" name="options" id="option2"> Radio 2
-    </label>
-    <label class="btn btn-primary">
-      <input type="radio" name="options" id="option3"> Radio 3
-    </label>
-  </div>
+    <!-- JavaScript Includes -->
+    <script src="../vendor/jquery.min.js"></script>
+    <script src="../../transition.js"></script>
+    <script src="../../button.js"></script>
 
-</div>
-
-<!-- JavaScript Includes -->
-<script src="../vendor/jquery.min.js"></script>
-<script src="../../transition.js"></script>
-<script src="../../button.js"></script>
-
-<!-- JavaScript Test -->
-<script>
-$(function () {
-  $('.js-loading-button').on('click', function () {
-    var btn = $(this).button('loading')
-    setTimeout(function (){
-      btn.button('reset')
-    }, 3000)
-  })
-})
-</script>
-</body>
+    <!-- JavaScript Test -->
+    <script>
+      $(function () {
+        $(".js-loading-button").on("click", function () {
+          var btn = $(this).button("loading");
+          setTimeout(function () {
+            btn.button("reset");
+          }, 3000);
+        });
+      });
+    </script>
+  </body>
 </html>
