--- a/assets/less/bootstrap-3.3.6/js/tests/visual/scrollspy.html
+++ b/assets/less/bootstrap-3.3.6/js/tests/visual/scrollspy.html
@@ -6,6 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Scrollspy</title>
   <link rel="stylesheet" href="../../../dist/css/bootstrap.min.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-3509031-17"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-3509031-17");
+    </script>
 
   <style>
     body { padding-top: 70px; }
