fix inlude URLs

--- a/fields.html
+++ b/fields.html
@@ -12,22 +12,10 @@
     <meta name="description" content="Thank You!" />
     <meta name="author" content="AIR" />
     <!--<link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700,800%7CRoboto+Slab:400,700' rel='stylesheet' type='text/css'>-->
-    <link
-      rel="stylesheet"
-      href="https://dev.patentsview.org/api/css/custom.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://dev.patentsview.org/web/css/headfoot.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://dev.patentsview.org//assets/css/font-awesome.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://dev.patentsview.org//assets/css/pvqt.css"
-    />
+    <link rel="stylesheet" href="assets/css/custom.css" />
+    <link rel="stylesheet" href="assets/css/headfoot.css" />
+    <link rel="stylesheet" href="/assets/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="/assets/css/pvqt.css" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
@@ -227,9 +215,7 @@
               In Step 1, select the primary category of interest: patents,
               inventors, or assignees. Query results will be organized based on
               these primary categories, which correspond to the
-              <a href="https://dev.patentsview.org/api/" target="_blank"
-                >PatentsView API Endpoints.</a
-              >
+              <a href="/api/" target="_blank">PatentsView API Endpoints.</a>
             </p>
 
             <p>
@@ -336,19 +322,13 @@
 
             <p>
               Key terms in the patent data are defined in the
-              <a
-                href="https://dev.patentsview.org/api/glossary.html"
-                target="_blank"
-                >Glossary</a
-              >.
+              <a href="/api/glossary.html" target="_blank">Glossary</a>.
             </p>
 
             <p>
               The primary category defines the search groups available to define
               specific criteria. The
-              <a
-                href="https://dev.patentsview.org//query/data_dictionary.html"
-                target="_blank"
+              <a href="/query/data_dictionary.html" target="_blank"
                 >Query Tool Data Dictionary</a
               >
               provides definitions, search group, and category of all searchable
@@ -488,7 +468,7 @@
             <p>
               Consult the full agency hierarchy in the
               <a
-                href="https://dev.patentsview.org/data/20160715/government_organization.zip"
+                href="/data/20160715/government_organization.zip"
                 target="_blank"
                 >government organization table</a
               >
@@ -528,7 +508,7 @@
 
             <p>
               Note that the entire PatentsView database can be accessed via the
-              <a href="https://dev.patentsview.org/download/" target="_blank"
+              <a href="/download/" target="_blank"
                 >PatentsView Bulk Downloads</a
               >
               or via a MySQL database dump upon request to
