--- a/thank-you.html
+++ b/thank-you.html
@@ -57,7 +57,7 @@
           emailed to you within 24 hours.
         </p>
         <a
-          href="https://dev.patentsview.org/"
+          href="/query/"
           class="prev-next-btn btn btn-lg btn-primary"
           title="Begin New Query"
           >Begin New Query <i class="fa fa-caret-right"></i
