remove step-by-step container

--- a/fields.html
+++ b/fields.html
@@ -85,7 +85,7 @@
     >
 
     <!-- Container -->
-    <section id="step-by-step-container" class="container"></section>
+    <!-- <section id="step-by-step-container" class="container"></section> -->
     <!-- /Container -->
     <section class="container">
       <div class="container" role="main">
