--- a/thank-you.html
+++ b/thank-you.html
@@ -46,7 +46,7 @@
     >
 
     <!-- Container -->
-    <section id="step-by-step-container" class="container"></section>
+    <!-- <section id="step-by-step-container" class="container"></section> -->
     <!-- /Container -->
     <section class="container" style="margin-bottom: 200px;">
       <!-- form action buttons -->
