add back some step-by-step container; fix a few links to point to relative path

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     >
     <div class="page-wrapper">
       <!-- Container -->
-      <!-- <section id="step-by-step-container" class="container"></section> -->
+      <section id="step-by-step-container" class="container"></section>
       <!-- /Container -->
       <form id="submit" method="post" action="submit.php">
         <!--<form id="submit" method="post" action="/query/submit.php">-->
