remove XML option and texts

--- a/fields.html
+++ b/fields.html
@@ -294,8 +294,8 @@
             </h4>
 
             <p>
-              Review search criteria and preview query results in CSV, JSON, or
-              XML format. Additional changes can be made to search criteria and
+              Review search criteria and preview query results in CSV or JSON
+              format. Additional changes can be made to search criteria and
               output fields, by clicking the Edit button.
             </p>
 
@@ -482,7 +482,7 @@
             <p>
               Users can preview the results of their query before submitting the
               full search. The preview dataset contains up to top 10 rows of the
-              full dataset and is presented in CSV, JSON, and XML format.
+              full dataset and is presented in CSV or JSON format.
             </p>
 
             <h2>
