update header-footer script

--- a/thank-you.html
+++ b/thank-you.html
@@ -48,7 +48,7 @@
     <!-- Container -->
     <section id="step-by-step-container" class="container"></section>
     <!-- /Container -->
-    <section class="container" style="margin-bottom: 200px;">
+    <section class="container" style="margin-bottom: 200px">
       <!-- form action buttons -->
       <div class="col-md-12">
         <h1 class="thankyou">Thank you</h1>
@@ -65,6 +65,6 @@
       </div>
     </section>
     <!-- form action buttons -->
-    <script src="js/header_footer.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/PatentsView/pv-header-footer/dist.js"></script>
   </body>
 </html>
