--- a/faqs.html
+++ b/faqs.html
@@ -532,6 +532,6 @@
     </section>
 
     <!-- form action buttons -->
-    <script src="js/header_footer.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/PatentsView/pv-header-footer/dist.js"></script>
   </body>
 </html>
