--- a/index.html
+++ b/index.html
@@ -69,6 +69,6 @@
       async
       defer
     ></script>
-    <script src="js/header_footer.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/PatentsView/pv-header-footer/dist.js"></script>
   </body>
 </html>
