--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Create a PatentsView Query</title>
+    <title>Search Patents With the Query Tool | Data Sets | PatentsView</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Create a new Query" />
+    <meta
+      name="description"
+      content="Explore multiple patent data sets, create your own query, and export data through the search patents query tool on PatentsView. "
+    />
     <meta name="author" content="AIR" />
     <!-- <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700,800%7CRoboto+Slab:400,700"
