update link text

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               </div>
               <div class="section-menu" id="section-menu">
                 <a href="./" class="highlighted-link"
-                  >DATASET&nbsp;QUICK&nbsp;BUILDER</a
+                  >DATASET&nbsp;QUERY&nbsp;BUILDER</a
                 >
                 <a
                   href="https://community.patentsview.org/query/data-dictionary"
